# ludo

./: Cargo.toml  README.md  package-lock.json  package.json
src/: browser.rs  engine.rs  lib.rs
src/programs/: cube_program.rs  helper.rs  ludo_program.rs  mod.rs  point_program.rs  texture_program.rs  three_triangles.rs
src/programs/ludo/: board_configuration.rs  color.rs  coordinate.rs  dice_state.rs  ludo_program.rs  mod.rs  position.rs  token.rs
src/server/: mod.rs
src/server/entity/: action.rs  color.rs  game.rs  mod.rs  player.rs  token.rs
src/server/service/: server.rs  state.rs
src/shaders/fragment/: cube_shader.rs  fpoint_shader.rs  ludo_shader.rs  mod.rs  texture_shader.rs  three_triangles.rs
src/shaders/vertex/: cube_shader.rs  ludo_shader.rs  mod.rs  texture_shader.rs  three_triangles.rs  vpoint_shader.rs
static/: index.html
