# You must change these to your own details.
[package]
name = "ludo"
description = "3D ludo"
version = "0.1.0"
authors = ["vishalcjha@gmail.com"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
futures = "0.3.28"
wasm-bindgen-futures = "0.4.37"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }
nalgebra = "0.32.3"
lazy_static = "1.4.0"
axum = {version = "0.6.20", features = ["ws", "json", "tokio", "tracing", "macros", "headers"]}
tokio = {version =  "1.33.0", features = ["full"]}
tower-http =  {version =  "0.4.4", features = ["tracing", "trace"]}
tokio-tungstenite = {version =  "0.20.1", features = ["connect"]}
tungstenite = "0.20.1"


# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "MouseEvent",
    "HtmlImageElement",
    "WebGlTexture",
    "HtmlButtonElement",
    "MouseEvent",
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
rstest = "0.18.2"
